--- a/lab-2/aboutme-style.css
+++ b/lab-2/aboutme-style.css
@@ -5,20 +5,21 @@
 	  display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
 }
 h5{
 	font-size: 50px;
 	text-align: center;
 	margin: 0;
 	font-family: Monotype Corsiva;
-	color: white;
+	color: #11AFEA;
 }
 #infoAboutMe{
 	font-size: 30px;
 	text-align: center;
 }
 h3{
-	color: white;
+	color: #11AFEA;
 	font-size: 20px;
 }
 body{
@@ -49,4 +50,12 @@ p{
 }
 td{
 	text-align: center;
+}
+div{
+	background-color: white; 
+	margin:auto;
+	margin-top: 20px;
+	margin-bottom: 20px; 
+	border-radius: 8px;
+	text-indent: 1.5em;
 }
