--- a/aboutme-style.css
+++ b/aboutme-style.css
@@ -5,21 +5,20 @@
 	  display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
 }
 h5{
 	font-size: 50px;
 	text-align: center;
 	margin: 0;
 	font-family: Monotype Corsiva;
-	color: #11AFEA;
+	color: white;
 }
 #infoAboutMe{
 	font-size: 30px;
 	text-align: center;
 }
 h3{
-	color: #11AFEA;
+	color: white;
 	font-size: 20px;
 }
 body{
@@ -50,12 +49,4 @@ p{
 }
 td{
 	text-align: center;
-}
-div{
-	background-color: white; 
-	margin:auto;
-	margin-top: 20px;
-	margin-bottom: 20px; 
-	border-radius: 8px;
-	text-indent: 1.5em;
 }
